autohatch mod commit

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -628,3 +628,7 @@ SignificanceManagerClassName="/Script/Pal.PalSignificanceManager"
 [Core.System]
 # Fixes certain custom assets not packaging properly like custom data tables. They would end up empty and crash the game when referenced. Thanks Narknon!
 CanUseUnversionedPropertySerialization=False
+
+[/Script/UnrealEd.CookerSettings]
+cook.AllowCookedDataInEditorBuilds=True
+s.AllowUnversionedContentInEditor=1
