add blueprint files and add AutoHatch

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1378,9 +1378,11 @@ BlueprintGraph.TimeStamp=2025.08.16-04.07.59
 BlueprintGraph.LastCompileMethod=Unknown
 ExternalImagePicker.TimeStamp=2025.08.16-04.08.02
 ExternalImagePicker.LastCompileMethod=Unknown
+NullDrv.TimeStamp=2025.08.16-04.08.05
+NullDrv.LastCompileMethod=Unknown
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Mods/AutoHatch/ModActor.ModActor
 
 [RootWindow]
@@ -1424,7 +1426,7 @@ RecentsFiles=D:/GAME/EpicGames/UE_5.1/Engine/Plugins/Animation/ControlRig/Conten
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
-ContentBrowserDrawer.CollectionAreaExpanded=False
+ContentBrowserDrawer.CollectionAreaExpanded=True
 ContentBrowserDrawer.FavoritesSearchAreaExpanded=False
 ContentBrowserDrawer.PathSearchAreaExpanded=False
 ContentBrowserDrawer.CollectionSearchAreaExpanded=False
@@ -2926,6 +2928,8 @@ TryMovePalEggsToTargetContainer=K2Node_VariableGet.DefaultValueCategory.MapObjec
 TryMovePalEggsToTargetContainer_46=K2Node_VariableGet.DefaultValueCategory.MapObjectInstanceIdRepInfoArray,K2Node_VariableGet.DefaultValueCategory.AllHatchingEggsOfBaseCampMap,EdGraph.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_VariableGet.DefaultValueCategory.NewVar,K2Node_FunctionEntry.Inputs.B9AA654F4AC98B1B99C7618F9F50E416,K2Node_FunctionEntry.Inputs.869787EA4505A84324C851A15C23F0C5,K2Node_FunctionEntry.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_FunctionEntry.Inputs.1ED0F1E8485DA0533E703AB65D624565,K2Node_FunctionEntry.Inputs.28F730204FF60F2B75CF45B89D7A0B8E,K2Node_FunctionEntry.Inputs.5D211B7142F9BC64A6C4E1AA022C55CC,K2Node_FunctionEntry.Inputs.5B71A8174F12EB000927AA8678FB3541,
 GetAllCampIds=K2Node_VariableGet.DefaultValueCategory.MapObjectInstanceIdRepInfoArray,K2Node_VariableGet.DefaultValueCategory.AllHatchingEggsOfBaseCampMap,EdGraph.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_VariableGet.DefaultValueCategory.NewVar,K2Node_FunctionEntry.Inputs.B9AA654F4AC98B1B99C7618F9F50E416,K2Node_FunctionEntry.Inputs.869787EA4505A84324C851A15C23F0C5,K2Node_FunctionEntry.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_FunctionEntry.Inputs.1ED0F1E8485DA0533E703AB65D624565,K2Node_FunctionEntry.Inputs.28F730204FF60F2B75CF45B89D7A0B8E,K2Node_FunctionEntry.Inputs.5D211B7142F9BC64A6C4E1AA022C55CC,K2Node_FunctionEntry.Inputs.5B71A8174F12EB000927AA8678FB3541,K2Node_FunctionResult.Inputs.EF83EA5F4F19A6EAB538BA8268499462,
 GetAllCampIds_36=K2Node_VariableGet.DefaultValueCategory.MapObjectInstanceIdRepInfoArray,K2Node_VariableGet.DefaultValueCategory.AllHatchingEggsOfBaseCampMap,EdGraph.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_VariableGet.DefaultValueCategory.NewVar,K2Node_FunctionEntry.Inputs.B9AA654F4AC98B1B99C7618F9F50E416,K2Node_FunctionEntry.Inputs.869787EA4505A84324C851A15C23F0C5,K2Node_FunctionEntry.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_FunctionEntry.Inputs.1ED0F1E8485DA0533E703AB65D624565,K2Node_FunctionEntry.Inputs.28F730204FF60F2B75CF45B89D7A0B8E,K2Node_FunctionEntry.Inputs.5D211B7142F9BC64A6C4E1AA022C55CC,K2Node_FunctionEntry.Inputs.5B71A8174F12EB000927AA8678FB3541,K2Node_FunctionResult.Inputs.EF83EA5F4F19A6EAB538BA8268499462,
+LoadPlayerSettings=K2Node_VariableGet.DefaultValueCategory.MapObjectInstanceIdRepInfoArray,K2Node_VariableGet.DefaultValueCategory.AllHatchingEggsOfBaseCampMap,EdGraph.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_VariableGet.DefaultValueCategory.NewVar,K2Node_FunctionEntry.Inputs.B9AA654F4AC98B1B99C7618F9F50E416,K2Node_FunctionEntry.Inputs.869787EA4505A84324C851A15C23F0C5,K2Node_FunctionEntry.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_FunctionEntry.Inputs.1ED0F1E8485DA0533E703AB65D624565,K2Node_FunctionEntry.Inputs.28F730204FF60F2B75CF45B89D7A0B8E,K2Node_FunctionEntry.Inputs.5D211B7142F9BC64A6C4E1AA022C55CC,K2Node_FunctionEntry.Inputs.5B71A8174F12EB000927AA8678FB3541,K2Node_FunctionResult.Inputs.EF83EA5F4F19A6EAB538BA8268499462,
+LoadPlayerSettings_15=K2Node_VariableGet.DefaultValueCategory.MapObjectInstanceIdRepInfoArray,K2Node_VariableGet.DefaultValueCategory.AllHatchingEggsOfBaseCampMap,EdGraph.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_VariableGet.DefaultValueCategory.NewVar,K2Node_FunctionEntry.Inputs.B9AA654F4AC98B1B99C7618F9F50E416,K2Node_FunctionEntry.Inputs.869787EA4505A84324C851A15C23F0C5,K2Node_FunctionEntry.Inputs.E9A36A44408B781E718D0BB15A4DE2B5,K2Node_FunctionEntry.Inputs.1ED0F1E8485DA0533E703AB65D624565,K2Node_FunctionEntry.Inputs.28F730204FF60F2B75CF45B89D7A0B8E,K2Node_FunctionEntry.Inputs.5D211B7142F9BC64A6C4E1AA022C55CC,K2Node_FunctionEntry.Inputs.5B71A8174F12EB000927AA8678FB3541,K2Node_FunctionResult.Inputs.EF83EA5F4F19A6EAB538BA8268499462,
 
 [MessageLog]
 LastLogListing=AssetCheck
